# medlens

./: .gitignore  3_work_guide_complete_20260201.md  4_work_guide_competition_audit_20260201.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.ralph/: CLAUDE.md  baseline_metrics.json  brief.md  checkpoint_log.json  config.json  context.md  cost_history.json  learnings.md  plan.md  progress.md  verification_cache.json
.ralph/metrics/: daily.json
.ralph/prompts/: execute.md  plan.md  scout.md  understand.md
configs/: model_config.yaml
docs/: demo_script.md  github_setup.md  sample_images.md  submission_checklist.md  writeup_template.md
examples/: sample_output_dermatology.json  sample_output_wound.json
scripts/: download_model.sh  setup_env.sh
src/medlens/: __init__.py  app.py  evaluate.py  model.py  orchestrator.py
src/medlens/agents/: __init__.py  parsing.py  reasoning.py  report.py  visual.py
tests/: test_agents.py
